# removed_vim

./: .gitignore  .netrwhist  README.md  bashrc  build.md  config  eclimrc  vimrc  vimshrc  霸气测漏.txt
UltiSnips/: cpp.snippets  java.snippets  jess.snippets  jsonnet.snippets  make.snippets  markdown.snippets  python.snippets  r.snippets  sh.snippets  xml.snippets
configure/: .gitignore  CMakeLists.txt  Makefile  Rprofile  bash.cmd  bashrc  condarc  credentials  eclimrc  flake8  fzf.bash  git-push-files  git.alias  git.config  gtk.css  hosts  pip.conf  profile  proxy.pac  run.sh  ssh.config  ssh.config.templ  sshfs-eta-data  sysinstall  terminator.conf  tmux.conf  vim-sync  vim-with-servername  vim_binding.css  ycm_extra_conf.py  ycm_extra_conf_cpp.py  ycm_extra_conf_py.py
configure/apps/: gvim.desktop  shiori.service  v2milk.desktop
configure/docker/: wechat.sh
configure/env/: docker.env  k8s.env  kafka.env
configure/etc/: baiduyun.conf  containerd.config.toml  docker.daemon.json  environment  exports  fstab  hosts  pip.conf  privoxy.config  proxy.pac  ssh.config  svn.conf  tmux.conf
configure/etc/apt/: sed.sh
configure/extensions/: OmegaOptions.bak  ShortKeys.json  config.saladict  custom_code_injector.json  custom_right-click_menu.json  vimium_c.json
configure/git/: git-credentials  git.alias  git.config
configure/goldendict/: .gitignore  config  readme.md
configure/home/orangepi/: adb.sh  iremote.sh  orangepi.md  sensor99.sh  sunxi-ir.kl  suproce.sh
configure/home/orangepi/le/: Generic.kl
configure/home/raspberry/: 50-lineage.sh  Generic.kl  Generic.kl.ori  adb.sh  distance_detect.sh  sensor99.rc  sensor99.sh
configure/nautilus/scripts/: 0gvim  0nvim
configure/nautilus/scripts/git/: git-del  git-get  git-push  oss-del  oss-get  oss-push
configure/nautilus/scripts/sshfs/: sshfs-erlangai-blog
configure/projects/: .clangd  clangd  flake8  pyproject.toml
configure/terminator/: config  readme.txt
configure/terminator/plugins/: jump.py  logcat.py  logvim.py  open_any_file_plugin.py
configure/ycm/: ycm_extra_conf_cpp.py  ycm_extra_conf_py.py
dict/: android_xml.txt  math.txt  toefl_eng.txt  wordlist.txt
doc/: NERD_tree_ch.txt  boxes.txt  tags  tags-ja
errors/: gtk.md
ftplugin/: python.vim
init/: CCTree_conf.vim  DrawIt_conf.vim  EasyMotion_conf.vim  FuzzyFinder_conf.vim  LeaderF_conf.vim  Nvim-R_conf.vim  YouCompleteMe_conf.vim  bufexplorer_conf.vim  deoplete.nvim_conf.vim  dict.vim_conf.vim  eclim_conf.vim  fzf_conf.vim  jedi-vim_conf.vim  jupyter-vim_conf.vim  main.vim  neocomplcache.vim_conf.vim  neocomplete.vim_conf.vim  nerdcommenter_conf.vim  nerdtree-git-plugin_conf.vim  nerdtree_conf.vim  supertab_conf.vim  syntastic_conf.vim  tagbar_conf.vim  vcscommand.vim_conf.vim  vim-bookmarks_conf.vim  vim-gitgutter_conf.vim  vim-instant-markdown_conf.vim  vim-jsonnet_conf.vim  vim-maximizer_conf.vim  vim-pandoc-syntax_conf.vim  vim-pandoc_conf.vim  vim-powerline_conf.vim  vim-snippets_conf.vim  vimim_conf.vim  (+1 more)
(+154 files in other folders)
